--- a/index.html
+++ b/index.html
@@ -1,54 +1,43 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "chimu3", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Private Home Services</title>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "chimu", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
-<!-- Meta tags Open Graph para redes sociales -->
-<meta property="og:title" content="Private Home Services">
-<meta property="og:description" content="Safe and high-quality private services delivered to your home. Click to learn more!">
-<meta property="og:image" content="https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://yourdomain.com/">
-
-<!-- Meta Twitter -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Private Home Services">
-<meta name="twitter:description" content="Safe and high-quality private services delivered to your home. Click to learn more!">
-<meta name="twitter:image" content="https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png">
-
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="robots" content="noindex, nofollow">
+<title>Serv1cios privados</title>
+<meta content='https://i.postimg.cc/qRPFFGXD/104100349-973327893087249-88687013986181845-n.jpg' property='og:image'/>
+<script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
+<script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
+<script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
+<script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-
-</head>
-<body>
-
-<div class="layer"></div>
-
-<div class="wrap">
-  <div class="step-block">
-    <div class="logo">
-      <img src="https://i.imgur.com/sZdtUEq.png" alt="Logo">
-    </div>
-
-    <div class="step-item" style="display:block;">
-      <div class="question-title">
-        Discover our private home services. Are you over 18 years old?
-      </div>
-      <div class="buttons-block">
-        <a href="https://lov-me-bttr.com/tds/ae?tdsId=s8753pos_r&tds_campaign=s8753pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=8de31337&subid={ChimuAgain}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn">Yes, Show Me More</a>
-      </div>
-    </div>
-  </div>
+<title>Galeria de fotos</title>
+<div class="layer">
 </div>
-
-<!-- Video Background (opcional) -->
-<video autoplay muted loop id="VideoBg" style="position:fixed;top:0;left:0;width:100%;height:100%;object-fit:cover;z-index:-1;">
-  <source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-5.mp4" type="video/mp4">
+<div class="wrap">
+<div class="step-block">
+<div class="logo">
+<img src="https://i.imgur.com/sZdtUEq.png" alt="">
+</div>
+<div class="step-item" style="display: block;">
+<div class="question-title ">
+Ofrezco servicios sexuales y masajes eróticos nudistas. ¿Te gustaría ver mi catálogo?
+</div>
+<div class="buttons-block">
+<a href="https://searchfordating.com/tds/ae?tdsId=s2190pos_r&tds_campaign=s2190pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=1b48fff7&subid={ChimuAgain}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">SÍ
+</a>
+</div>
+</div>
+<video autoplay muted loop id="VideoBg">
+<source src="https://cdn77-vid-mp4.xvideos-cdn.com/NrI-9u_A9xGDFVqrq1cCLw==,1737966589/videos/mp4/7/2/5/xvideos.com_725b860aa69386510f8343555c9a0e59.mp4?ui=MTg2Ljg5LjI1MC40Ny05MjkzNTc0MTktL3ZpZGVvLm90aXZmaW05MmRlL2xhX3ZhcXVlcmFf" type="video/mp4">
 </video>
-
+<script type="text/javascript">
+      /*<![CDATA[*/    (function(w){
+        w.backOfferUrl = ''    }
+                        (window));
+      /*]]>*/ 
 </body>
 </html>
-
