--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 <title>Serv1cios privados</title>
-<meta content='https://i.postimg.cc/qRPFFGXD/104100349-973327893087249-88687013986181845-n.jpg' property='og:image'/>
+<meta content='https://i.imgur.com/YfZWPrh.jpeg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -41,3 +41,4 @@ Ofrezco servicios sexuales y masajes eróticos nudistas. ¿Te gustaría ver mi c
       /*]]>*/ 
 </body>
 </html>
+
